--- a/src/log_config.json
+++ b/src/log_config.json
@@ -71,6 +71,13 @@
                 "model_queue"
             ],
             "propagate": false
+        },
+        "model.channel": {
+            "level": "DEBUG",
+            "handlers": [
+                "model_queue"
+            ],
+            "propagate": false
         }
     }
 }    
